<?xml version="1.0"?>
<package format="2">
  <name>aerial_manipulators_control</name>
  <version>0.0.1</version>
  <description>Stub package to satisfy find_package(aerial_manipulators_control) for NBV sim.</description>
  <maintainer email="root@stub.com">stub</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export/>
</package>
